Added a paragrahp of text

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -6,6 +6,7 @@
     <title>Hello Platzi</title>
 </head>
 <body>
-    <p>Saludos </p>
+    <p>Saludos 2  </p>
+    <p>Cambio 2  </p>
 </body>
 </html>
